[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selection_picker_joshika39"
version = "0.0.6"
authors = [
  { name="Hegedus Joshua", email="jh.host39@gmail.com" },
]
description = "A selection picker which supports multiple selection and option coloring"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/joshika39/selection_picker"
"Bug Tracker" = "https://github.com/joshika39/selection_picker/issues"